@@ -1,5 +1,6 @@
 Changelog for Hearthstone (v1.1.2-SNAPSHOT)
 
+2012-02-24 17:21:00 +0000    fix bug where cooldown is always 5 minutes and in checking if it has expired (James Richardson)
 2012-02-24 17:17:33 +0000    fixed another key missing exception (James Richardson)
 2012-02-24 17:15:45 +0000    fixed missing key exceptions (James Richardson)
 2012-02-24 06:38:58 +0000    implemented localisation upgraded to new version of bukkit-utilities (James Richardson)
